<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Featured_fragment"
        android:title="@string/featured"
        android:icon="@drawable/ic_star"
        />

    <item
        android:id="@+id/Search_fragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        />

    <item
        android:id="@+id/Learn_fragment"
        android:title="@string/learn"
        android:icon="@drawable/ic_copy"
        />

    <item
        android:id="@+id/Bookmarks_fragment"
        android:title="@string/bookmarks"
        android:icon="@drawable/ic_saved"
        />

    <item
        android:id="@+id/Profile_fragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />

</menu>