<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginText1"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/white" />


    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginText2"
                android:textColor="@color/home"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginText3"
                android:alpha="0.7"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginText4"
                android:textStyle="bold"
                android:alpha="0.7"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_true"/>


            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginText5"
                android:textStyle="bold"
                android:alpha="0.7"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_eye"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/RememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/loginText6" />


                <TextView
                    android:id="@+id/ForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/loginText7"
                    android:textColor="@color/blue" />

            </RelativeLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>


            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"

                android:layout_height="50dp"
                android:background="@drawable/button_blue"
                android:text="@string/loginText1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <Button
                android:id="@+id/GoogleBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_google"
                android:drawableStart="@drawable/ic_google"

                android:gravity="start|center_vertical"
                android:paddingLeft="69dp"
                android:text="@string/googleBtn"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <Button
                android:id="@+id/fbBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_fb"
                android:drawableStart="@drawable/ic_fb"

                android:gravity="start|center_vertical"
                android:paddingLeft="69dp"
                android:text="@string/fbBtn"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/CreateAccText"

                    android:text="@string/loginText8"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CreateAccText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"

                    android:text="@string/loginText9"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="60dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>